Update and rename CSC555FinalProject.ipynb to steam_game_prices.ipynb

--- a/steam_game_prices.ipynb
+++ b/steam_game_prices.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Final Project: Predicting Steam Game Prices with Machine Learning\n",
+        "# Predicting Steam Game Prices with Machine Learning\n",
         "#### Srilasya Ankireddypalle"
       ],
       "metadata": {
@@ -735,7 +735,6 @@
     {
       "cell_type": "code",
       "source": [
-        "'''\n",
         "CREATE EXTERNAL TABLE IF NOT EXISTS steam_ml_schema (\n",
         "    type STRING,\n",
         "    name STRING,\n",
@@ -766,7 +765,6 @@
         ")\n",
         "STORED AS PARQUET\n",
         "LOCATION 's3://csc555-bucket/steam-project/'\n",
-        "'''"
       ],
       "metadata": {
         "colab": {
